Revision history for Spreadsheet-HTML

1.05
    - added encode param (boolean) to augment encodes param (string of chars to encode)
    - encoding now takes place within _process instead of delegating to HTML::AutoTag
    - require HTML::AutoTag v1.02
    - mktable: added sep to list of skipped params (is this safe?)

1.04
    - Spreadsheet::Read options now available via ::File::Loader

1.03
    - init HTML::TableExtract with ( decode => 0 )
    - make SH::Engine method "private"
    - correct SH::Engine and SH::Presets POD
    - require HTML::AutoTag v1.01

1.02
    - broken, do not use

1.01
    - require HTML::AutoTag v1.00

1.00
    - ensure presets are customizable

0.43
    - added new preset tictactoe()
    - moved chess sub into its package

0.42
    - added worksheet param (for multiple data tables)
    - added thead.tr and tfoot.tr tag params
    - added benchmark tool
    - refactor td/th decision (slight speed increase)
    - removed Clone and Math::Matrix dependencies

0.41
    - added today param to calendar()
    - can override beadwork() colors with -N params
    - corrected checkerboard() alternating colors
    - added beadwork() presets: apple, cartman and homer
    - require HTML::AutoTag v0.09 (keeping up-to-date)
    - added Spreadsheet::Engine support via new param 'apply'
    - calendar() cells aligned to right
    - banner() alerts user to errors

0.40
    - corrected mktable params
    - sudoku() alerts user when no solutions found
    - sudoku() alerts user to install dependency

0.39
    - added sorted_attrs literal param

0.38
    - require HTML::AutoTag v0.07 (unsorted attributes)
    - added mario preset for beadwork()
    - no wantarray check for animate()

0.37
    - removed dk and shroom methods (now args to beadwork)
    - added beadwork (no useful API - simple refactor for now)
    - added mktable CLI tool
    - able to pass some custom args along to Handsontable JS